# worker

./: .env.example  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
app/: main.py  utils.py
app/core/: config.py  logging.py
app/grpc/: scheduler_client.py
app/runtime/: docker_runner.py  executor.py  resources.py
app/services/: heartbeat.py  pull_loop.py  registration.py
app/storage/: s3_client.py
grpc_generated/: worker_pb2.py  worker_pb2_grpc.py
protos/: worker.proto
