[project]
name = "worker"
version = "0.1.0"
description = "Worker node for the federated job scheduling platform"
requires-python = ">=3.14"
dependencies = [
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "protobuf>=6.33.6",
    "nats-py>=2.11.0",
    "docker>=7.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "psutil>=7.0.0",
    "tenacity>=9.1.2",
]
